--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,18 @@
  *= require_self
  */
 
+
 * {
   margin: 0;
   padding: 0;
   font-family: Helvetica;
 
 }
+
+html, body {
+  height: 100%;
+}
+
 
 a:link {
   color: black;
