--- a/app/assets/stylesheets/session/session.css
+++ b/app/assets/stylesheets/session/session.css
@@ -55,9 +55,17 @@
   width: 650px;
   height: 2px;
   margin-top: 36px;
-  margin-bottom: 32px;
+  margin-bottom: 12px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.session-errors {
+  font-size: 13px;
+  height: 13px;
+  color: red;
+  margin-bottom: 8px;
+  list-style: none;
 }
 
 .login-form-box {
