--- a/app/assets/stylesheets/album/create_album.css
+++ b/app/assets/stylesheets/album/create_album.css
@@ -1,6 +1,6 @@
 .create-album-full-page {
   background-color: lightgrey;
-  border-top: 1px solid lightgrey;
+  /* border-top: 1px solid lightgrey; */
 
 }
 
@@ -15,19 +15,88 @@
 }
 
 .create-album-background {
-  width: 975px;
-  height: auto;
+  width: 955px;
+  height: 1300px;
   background-color: #f5f5f5;
   margin: auto;
+  padding-left: 20px;
+
+
+}
+
+.create-album-form-content {
+  display: flex;
+
+}
+
+.create-album-left {
+  width: 467px;
+
+  height: 1300px;
+}
+
+.create-album-right {
+  width: 478px;
+  padding: 25px 20px 24px 20px;
 }
 
 
+.create-album-info-box {
+  margin-top: 22px;
+  width: 456px;
+  height: 72px;
+  background-color: white;
+  padding: 10px 1px 10px 10px;
+  border-top: 1px solid #dbdbdb;
+  border-bottom: 1px solid #dbdbdb;
+  border-left: 1px solid #0687f5;
+  display: flex;
+
+}
+
+.create-album-small-img {
+  width: 72px;
+  height: 72px;
+  margin-right: 10px;
+  display: block;
+
+}
+
+.create-album-small-img img{
+
+  width: 70px;
+  height: 70px;
+  border: 1px dashed #ccc;
+  display: block;
+
+}
+
+.create-album-title {
+  font-size: 20px;
+  color: #363636;
+}
+
+.create-album-by {
+  font-size: 11px;
+}
+
+.create-album-artist {
+  font-weight: bold;
+  font-size: 11px;
+  color:  #363636;
+}
+
+.create-album-right {
+  background-color: white;
+}
+
+/*
 .create-album-content {
   padding-top: 56px;
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 45px;
-}
+} */
 
 .create-album-heading {
 
@@ -36,10 +105,29 @@
   margin-bottom: 26px;
 }
 
-.create-album-title {
-  display: flex;
-  margin-bottom: 30px;
-  align-items: center;
+.create-album-title-input {
+  padding-bottom: 70px;
+  border-bottom: 1px dotted lightgrey;
+}
+
+.create-title-input {
+  width: 405px;
+  height: 27px;
+  padding: 5px 10px 5px 10px;
+  border: 1px solid #9c9c9c;
+  border-color: #9c9c9c #9c9c9c #ccc #ccc;
+  font-size: 22px;
+
+}
+
+.create-title-input:focus {
+  border-color: #50a1e6;
+  box-shadow: 0 0 5px #b4d7f9;
+  outline: medium none;
+}
+
+::placeholder {
+  color: #b0b0b0;
 }
 
 .create-title-label {
@@ -48,14 +136,6 @@
   font-size: 13px;
   margin-right: 10px;
 
-}
-
-.create-title-input  {
-  width: 369px;
-  height: 25px;
-  font-size: 14px;
-  padding-left: 3px;
-  outline: none;
 }
 
 .create-album-credits {
@@ -96,30 +176,71 @@
 
 }
 
+
+.inputfile-cover {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -3;
+
+}
+
+.inputfile-cover + label {
+  position: relative;
+  width: 143px;
+  height: 22px;
+  font-size: 18px;
+  color: #0687f5;
+  cursor: pointer;
+  outline: none;
+  text-align: center;
+  bottom: 140px;
+  z-index: 0;
+
+}
+
+.inputfile-cover + label:hover {
+  text-decoration: underline;
+
+}
+
+.update-album-image-hint {
+  position: relative;
+  bottom: 125px;
+  color: #999;
+  font-size: 12px;
+  z-index: 0;
+}
+
 .update-album-image {
   margin-top: 50px;
-  height: 275px;
+  height: 212px;
+  width: 448px;
 
 }
+
+
 
 .update-album-image-box > img {
-  width: 120px;
-  height: auto;
-
-
-}
-
-.update-album-image > label {
-  color: dimgray;
-  font-size: 13px;
+  width: 210px;
+  height: 210px;
+  border: 0;
+  z-index: 6;
 
 }
+
+
 
 .update-album-image-box {
-  width: 120px;
-  min-height: 120px;
-  border: 2px dashed darkgray;
+  color: #999;
+  width: 210px;
+  height: 210px;
+  border: 1px dashed silver;
   margin-bottom: 30px;
+  text-align: center;
+
 
 }
 
