--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,6 +14,7 @@
   window.bc = "<%= asset_path('bandcamp.png')%>"
   window.play = "<%= asset_path('play.jpg')%>"
   window.pause = "<%= asset_path('pause.jpg')%>"
+  window.white = "<%= asset_path('white.jpg')%>"
 </script>
 
 
