--- a/app/assets/stylesheets/artist/artist_nav.css
+++ b/app/assets/stylesheets/artist/artist_nav.css
@@ -97,10 +97,10 @@
   line-height: 43px;
 }
 
-.artist-nav-discover:hover {
+/* .artist-nav-discover:hover {
   background-color: #ded8d8;
   color: #777272;
-}
+} */
 
 .artist-nav-search {
   padding-right: 10px;
