--- a/app/assets/stylesheets/main/main_nav.css
+++ b/app/assets/stylesheets/main/main_nav.css
@@ -135,6 +135,7 @@
 }
 
 .main-nav-signup button {
+  background: transparent;
   font-weight: 550;
   font-size: 16px;
   padding-left: 9px;
@@ -156,6 +157,7 @@
 }
 
 .main-nav-logout button {
+  background: transparent;
   font-weight: 550;
   font-size: 16px;
   padding-left: 9px;
@@ -175,16 +177,6 @@
   border-left: 1px solid lightgray;
 }
 
-/* .main-nav-discover {
- padding-left: 9px;
- padding-right: 12px;
-
-} */
-
-/* .main-nav-discover:hover {
-  text-decoration: underline;
-  cursor: pointer;
-} */
 
 .main-nav-right-bottom a:link {
     text-decoration: none;
