--- a/app/assets/stylesheets/artist/artist_nav.css
+++ b/app/assets/stylesheets/artist/artist_nav.css
@@ -272,17 +272,10 @@
 }
 
 .artist-nav-dropdown-caret {
-  width: 9px;
-  height: 6px;
-  margin-top: 20px;
+  height: 43px;
+  line-height: 43px;
   margin-left: 7px;
-
-}
-
-.dropdown-caret {
   font-size: 11px;
-  position: relative;
-  bottom: 7px;
 }
 
 .artist-nav-dropdown-contents {
