--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -17,5 +17,5 @@
   window.white = "<%= asset_path('white.jpg')%>"
 </script>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 <main id="root"></main>
