--- a/app/assets/stylesheets/main/footer.css
+++ b/app/assets/stylesheets/main/footer.css
@@ -3,11 +3,13 @@
   height: 30px;
   color: white;
   font-family: Helvetica;
+  width: 100%;
 }
 
 .footer-content {
-  width: 975px;
-  margin: auto;
+
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   justify-content: space-between;
 }
