--- a/app/assets/stylesheets/main/main_page.css
+++ b/app/assets/stylesheets/main/main_page.css
@@ -1,20 +1,21 @@
 .main-photo-block {
-  height: 540px;
   width: 100%;
-  background-color: black;
+  height: auto;
   display: flex;
   justify-content: center;
 }
 
 
 .main-large-photo {
-  width: 1070px;
+  width: 75%;
   border-right: 2px solid white;
+  min-height: 400px;
 }
 
 .main-large-photo img {
-  width: 1070px;
-  height: 544px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .main-large-photo img:hover {
@@ -26,26 +27,28 @@
 
 }
 
-
 .main-small-photos {
-  width: 375px;
-
-
+  width: 25%;
+  min-height: 400px;
 }
 
 .main-small-photos li {
   list-style: none;
   padding: 0px;
   margin: 0px;
-  height: 180px;
+  height: calc(33.33% - 2px);
   border-bottom: 2px solid white;
+}
 
+.main-small-photos li:last-child {
+  border-bottom: none;
+  height: 33.33%;
 }
 
 .main-small-photos img {
-
-  height: 180px;
-  width: 375px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .main-small-photos img:hover {
@@ -62,11 +65,12 @@
   display: flex;
   justify-content: space-around;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .album-pres {
   text-align: center;
-  margin-bottom: 100px;
+  margin: 0 20px 50px;
 }
 
 .album-pres > a {
@@ -83,12 +87,28 @@
 }
 
 .main-albums-artist {
-
   font-size: 12px;
   color: gray;
 }
 
 .main-albums-title {
+  font-size: 13px;
+}
 
-font-size: 13px;
+@media only screen and (max-width: 767px) {
+  .main-large-photo {
+    width: 100%;
+    border: none;
+    min-height: 300px;
+  }
+  .main-small-photos {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .main-large-photo {
+    min-height: 200px;
+  }
+
 }
