--- a/app/assets/stylesheets/main/search_bar.css
+++ b/app/assets/stylesheets/main/search_bar.css
@@ -91,3 +91,12 @@
   line-height: 14px;
 
 }
+
+@media only screen and (max-width: 480px) {
+  .artist-search-bar {
+    width: 108px;
+  }
+  .search-results-list {
+    width: 146px;
+  }
+}
